# critiqueai

./: .gitignore  README.md  app.py  deployment_info.txt  docker-compose.yml  package.json
.github/workflows/: keep-alive.yml
apps/backend/: .env.example  app.py  requirements.txt
apps/frontend/: .env.example  package.json
apps/frontend/src/components/: GenerateNote.jsx  Navbar.jsx  RoadMap.jsx  SavedNotes.jsx  Summary.jsx
apps/frontend/src/components/Loginsetup/: SignupPage.jsx
apps/frontend/src/components/shared/: View.jsx
backend/: .env.example  Dockerfile.backend  app.py  pyproject.toml
frontend/: Dockerfile  index.html  package-lock.json
frontend/nginx/: nginx.conf
frontend/src/: App.jsx
frontend/src/components/: EvaluateInput.jsx  GenerateNote.jsx  Navbar.jsx  RoadMap.jsx  SavedNotes.jsx  Summary.jsx
frontend/src/components/Loginsetup/: LoginPage.jsx
frontend/src/components/shared/: Shared.jsx  View.jsx
src/components/: EvaluateInput.jsx  GenerateNote.jsx  RoadMap.jsx  SavedNotes.jsx  Summary.jsx
src/components/shared/: Shared.jsx  View.jsx
